{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "81637846-6df6-46ab-b855-7d4bb0632550",
            "actions": [
                {
                    "name": "primaryFire",
                    "type": "Value",
                    "id": "1e5b3e30-6ae5-45d9-8107-768877c65c2a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "jump",
                    "type": "Value",
                    "id": "b7a4321e-b150-40b3-bf73-64749dae1e2f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "horizontalMovement",
                    "type": "Value",
                    "id": "607a4039-78ae-4469-9c16-c8abb334fef7",
                    "expectedControlType": "Axis",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "verticalMovement",
                    "type": "Value",
                    "id": "0edc80b8-b88a-4930-8017-3507414797e8",
                    "expectedControlType": "Axis",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "forcePad",
                    "type": "Button",
                    "id": "8eb7cd73-d6f8-4c3f-821f-4e0e765a9719",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "aimAbsolute",
                    "type": "Value",
                    "id": "37f667c5-08be-4544-bb33-2188f3e4ad8a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "aimDirection",
                    "type": "Value",
                    "id": "1e0c5b10-3b0e-43a1-b55d-aa5e630c4afb",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "exit",
                    "type": "Button",
                    "id": "80c9640c-df71-402a-9234-283b434bef95",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "reset",
                    "type": "Button",
                    "id": "753534df-cdb7-4c91-9f8e-1fb16a6e8d14",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "action",
                    "type": "Button",
                    "id": "6fb0df71-7383-4455-9825-b43df4fd99c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b922145f-8a50-4109-acf7-0784853c7cca",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "primaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92a5d0c4-d143-4624-97bc-897f5849e5ba",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "primaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59654f35-d8c7-41ef-bf64-6f647aa63cc8",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7358f0ba-f644-4e90-aad9-c851eba76514",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f92247d6-bf61-4990-bed4-e3dbeb3c0eba",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "horizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "33323cad-dba7-44f0-9ff7-1f61ff65956e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "acbc816b-e0bd-48c6-9cc0-0cd4ada84ce1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "horizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "14ad9f41-0c56-483f-99f6-da46ab6d20e3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "horizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "185744af-25e4-4301-9ca9-3c03b8a5aef5",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.6)",
                    "groups": "Gamepad",
                    "action": "verticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "b497877d-e029-4433-8c4d-e6bcd2339dfc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "verticalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0181de2f-1516-46ae-9832-a4446c6bcd57",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "verticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "435b0a26-dd2e-4d3f-8be2-3e067d6edf9b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "verticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "edf069ee-6cd1-4861-b1e4-6f083653b322",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "forcePad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aadd428f-d904-4338-a1b0-7c70afff9a92",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "forcePad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03666a13-e9b7-43f4-910c-97fd17e93969",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "aimAbsolute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b788965-a9a0-41ba-aa2e-d6bf85ce52b1",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcae5523-f663-4cd3-b8cc-2896aecf1acb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68c7fd17-3efe-4380-903c-dc4f6bbb1a7e",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "137474e8-a7ac-4a2b-8dcf-024ac8cb17bd",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f01c000f-0b6d-4dea-9d43-2d908347424d",
                    "path": "*/{Secondary2DMotion}",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.25),NormalizeVector2",
                    "groups": "Gamepad",
                    "action": "aimDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4df7fa91-c913-4b87-ac93-1e1d51537ec4",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b89db55d-2755-4278-993c-69b0840305b9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "906d759b-6622-4efb-b58a-f728b70252e6",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": []
        }
    ]
}